# Trade_ops_agents

./: .gitignore  CONTRIBUTING.md  GEMINI.md  Makefile  README.md  llm.txt  pyproject.toml
.cloudbuild/: scheduled-cleanup.yaml
.cloudbuild/cd/: test_e2e.yaml  test_gemini_enterprise.yaml
.cloudbuild/ci/: build_use_wheel.yaml  lint.yaml  lint_templated_agents.yaml  test.yaml  test_agent_directory.yaml  test_makefile.yaml  test_pipeline_parity.yaml  test_remote_template.yaml  test_templated_agents.yaml
.cloudbuild/terraform/: apis.tf  build_triggers.tf  scheduled_cleanup.tf  service_account.tf  storage.tf  variables.tf
.cloudbuild/terraform/vars/: env.tfvars
.github/workflows/: docs.yml  release.yml  test-windows.yml
agent_starter_pack/agents/adk/: README.md
agent_starter_pack/agents/adk/.template/: templateconfig.yaml
agent_starter_pack/agents/adk/app/: agent.py
agent_starter_pack/agents/adk_a2a/: README.md
agent_starter_pack/agents/adk_a2a/.template/: templateconfig.yaml
agent_starter_pack/agents/adk_a2a/app/: agent.py
agent_starter_pack/agents/adk_a2a/notebooks/: adk_a2a_app_testing.ipynb
agent_starter_pack/agents/adk_go/.template/: templateconfig.yaml
agent_starter_pack/agents/adk_go/agent/: agent.go  agent_test.go
agent_starter_pack/agents/adk_java/.template/: templateconfig.yaml
agent_starter_pack/agents/adk_live/.template/: templateconfig.yaml
agent_starter_pack/agents/adk_live/app/: agent.py
agent_starter_pack/agents/adk_ts/.template/: templateconfig.yaml
agent_starter_pack/agents/adk_ts/app/: agent.ts
agent_starter_pack/agents/agentic_rag/.template/: templateconfig.yaml
agent_starter_pack/agents/agentic_rag/app/: agent.py  retrievers.py
agent_starter_pack/agents/langgraph/app/: __init__.py  (+1 more)
agent_starter_pack/base_templates/go/: .asp.toml  .env.example  .gitignore  .golangci.yml  Makefile  README.md  go.mod  go.sum  main.go  {{cookiecutter.agent_guidance_filename}}
agent_starter_pack/base_templates/java/: .env.example  .gitignore  Makefile  README.md  pom.xml
agent_starter_pack/base_templates/python/: Makefile  README.md  pyproject.toml  {{cookiecutter.agent_guidance_filename}}
agent_starter_pack/base_templates/python/.cloudbuild/: deploy-to-prod.yaml  pr_checks.yaml  staging.yaml
agent_starter_pack/base_templates/python/.github/workflows/: deploy-to-prod.yaml  pr_checks.yaml  staging.yaml
agent_starter_pack/base_templates/python/{{cookiecutter.agent_directory}}/app_utils/: gcs.py  telemetry.py  typing.py
agent_starter_pack/base_templates/python/{{cookiecutter.agent_directory}}/app_utils/converters/: __init__.py  part_converter.py
agent_starter_pack/base_templates/python/{{cookiecutter.agent_directory}}/app_utils/executor/: a2a_agent_executor.py  task_result_aggregator.py
agent_starter_pack/base_templates/typescript/: .asp.toml  .dockerignore  .gitignore  Makefile  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
agent_starter_pack/cli/: main.py
agent_starter_pack/cli/commands/: create.py  enhance.py  extract.py  list.py  register_gemini_enterprise.py  setup_cicd.py  upgrade.py
agent_starter_pack/cli/utils/: __init__.py  backup.py  cicd.py  command.py  gcp.py  generation_metadata.py  language.py  logging.py  merge.py  remote_template.py  template.py  upgrade.py  version.py
agent_starter_pack/resources/docs/: adk-cheatsheet.md  adk-deploy-guide.md  adk-eval-guide.md
agent_starter_pack/resources/idx_ag/: idx-template.json
agent_starter_pack/utils/: generate_locks.py  lock_utils.py  watch_and_rebuild.py
docs/: index.md  package-lock.json
docs/.vitepress/: config.js
docs/.vitepress/theme/: HomeHeroBanner.vue  MaintenanceBanner.vue  index.js
docs/agents/: overview.md
docs/cli/: create.md  enhance.md  extract.md  index.md  register_gemini_enterprise.md  setup_cicd.md  upgrade.md
docs/guide/: community-showcase.md  data-ingestion.md  deployment.md  development-guide.md  getting-started.md  installation.md  template-config-reference.md  video-tutorials.md
docs/guide/observability/: bq-agent-analytics.md  cloud-trace.md  index.md
docs/remote-templates/: creating-remote-templates.md  using-remote-templates.md
tests/cicd/: test_e2e_deployment.py  test_gemini_enterprise_registration.py
tests/cicd/scripts/: delete_agent_engines.py  delete_cloud_sql_instances.py  delete_service_accounts.py  delete_vector_search.py
tests/cli/commands/: test_create.py  test_create_local.py  test_enhance.py  test_extract.py  test_list.py  test_setup_cicd.py  test_upgrade.py
tests/cli/utils/: test_add_base_template_dependencies.py  test_backup.py  test_cicd.py  test_generation_metadata.py  test_language.py  test_register_gemini_enterprise.py  test_remote_template.py  test_template.py  test_upgrade_utils.py
tests/fixtures/: makefile_hashes.json
tests/fixtures/makefile_snapshots/: adk_a2a_agent_engine.makefile  adk_a2a_cloud_run.makefile  adk_a2a_gke.makefile  adk_agent_engine_no_data.makefile  adk_cloud_run_no_data.makefile  adk_gke_no_data.makefile  adk_go_cloud_run.makefile  adk_go_gke.makefile  adk_java_cloud_run.makefile  adk_java_gke.makefile  adk_live_agent_engine.makefile  adk_live_cloud_run.makefile  adk_live_gke.makefile  agent_with_agent_garden.makefile  agent_with_custom_commands.makefile  agentic_rag_cloud_run_vector_search.makefile  agentic_rag_cloud_run_vertex_search.makefile  langgraph_agent_engine.makefile  langgraph_cloud_run.makefile  langgraph_gke.makefile
tests/integration/: test_agent_directory_functionality.py  test_makefile_usability.py  test_pipeline_parity.py  test_remote_templating.py  test_template_linting.py  test_templated_patterns.py  utils.py
tests/unit/: test_makefile_template.py
tests/utils/: get_agents.py
tradesage-ops/: README.md  deploy.sh
tradesage-ops/backend/: Dockerfile  cloudbuild.yaml  main.py  requirements.txt
tradesage-ops/backend/app/: __init__.py  models.py
tradesage-ops/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
tradesage-ops/frontend/src/: App.tsx  index.css
(+137 files in other folders)
