[project]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "your@email.com"},
]
dependencies = [
{%- for dep in cookiecutter.extra_dependencies %}
    "{{ dep }}",
{%- endfor %}
    "opentelemetry-instrumentation-google-genai>=0.1.0,<1.0.0",
    "gcsfs>=2024.11.0",
{%- if not cookiecutter.is_adk %}
    "opentelemetry-exporter-otlp-proto-http>=1.29.0,<2.0.0",
{%- endif %}
    "google-cloud-logging>=3.12.0,<4.0.0",
{%- if cookiecutter.deployment_target in ('cloud_run', 'gke') %}
    "google-cloud-aiplatform[evaluation]>=1.130.0",
    "fastapi>=0.115.8,<1.0.0",
    "uvicorn~=0.34.0",
    "asyncpg>=0.30.0,<1.0.0",
{%- elif cookiecutter.deployment_target == 'agent_engine' %}
    "google-cloud-aiplatform[evaluation,agent-engines]>=1.130.0",
    "protobuf>=6.31.1,<7.0.0",
{%- endif %}
]
requires-python = ">=3.10,<3.14"


[dependency-groups]
dev = [
    "pytest>=8.3.4,<9.0.0",
    "pytest-asyncio>=0.23.8,<1.0.0",
    "nest-asyncio>=1.6.0,<2.0.0",
]

[project.optional-dependencies]
jupyter = [
    "jupyter>=1.0.0,<2.0.0",
]
eval = [
    "google-adk[eval]>=1.15.0,<2.0.0",
]
lint = [
    "ruff>=0.4.6,<1.0.0",
    "ty>=0.0.1a0",
    "codespell>=2.2.0,<3.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "C",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP", # pyupgrade
    "RUF", # ruff specific rules
]
ignore = ["E501", "C901", "B006"] # ignore line too long, too complex

[tool.ruff.lint.isort]
known-first-party = ["{{cookiecutter.agent_directory}}", "frontend"]

[tool.ty]
# ty is Astral's Rust-based type checker (same team as ruff/uv)
# See: https://docs.astral.sh/ty/

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
{% if cookiecutter.is_adk_live -%}
exclude = [".venv/**", "frontend/**"]
{%- else -%}
exclude = [".venv/**"]
{%- endif %}

[tool.ty.rules]
# Ignore common issues with third-party libraries and dynamic code patterns
unresolved-import = "ignore"
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
invalid-return-type = "ignore"
possibly-missing-attribute = "ignore"
not-subscriptable = "ignore"
deprecated = "ignore"

[tool.codespell]
ignore-words-list = "rouge"
skip = "./locust_env/*,uv.lock,.venv,./frontend,**/*.ipynb,**/package-lock.json"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.build.targets.wheel]
packages = ["{{cookiecutter.agent_directory}}","frontend"]

[tool.agent-starter-pack]
# Generation metadata - enables CLI commands to understand project context
# These fields allow any generated project to work as a remote template
name = "{{cookiecutter.project_name}}"
description = "{{cookiecutter.agent_description}}"
base_template = "{{cookiecutter.agent_name}}"
agent_directory = "{{cookiecutter.agent_directory}}"

# Generation context
generated_at = "{{cookiecutter.generated_at}}"
asp_version = "{{cookiecutter.package_version}}"

[tool.agent-starter-pack.create_params]
# Parameters used during project creation
deployment_target = "{{cookiecutter.deployment_target}}"
session_type = "{{cookiecutter.session_type or 'none'}}"
cicd_runner = "{{cookiecutter.cicd_runner}}"
include_data_ingestion = {{ cookiecutter.data_ingestion | lower }}
datastore = "{{cookiecutter.datastore_type or 'none'}}"
{%- if cookiecutter.agent_guidance_filename != "GEMINI.md" %}
agent_guidance_filename = "{{cookiecutter.agent_guidance_filename}}"
{%- endif %}
